--- a/index.html
+++ b/index.html
@@ -24,39 +24,32 @@
 		<div id="Client" class="tabcontent">
 			<h3>Client Information</h3>
 			<p>Tell us a bit about you.</p>
-			Select all that apply to you <br />
+			What are your preferences? We'll use these to curate the right products for you.<br />
 
 			<div class="display-box">
-				<input
-					type="checkbox"
-					id="vegetarian"
-					class="restriction"
-					onclick="restrictions.vegetarian = !restrictions.vegetarian"
-				/>
 				<label> Vegetarian </label>
+				<select onchange="setRestriction('vegetarian')" id="vegetarian">
+					<option value="true">Yes</option>
+					<option value="false" selected="selected">No</option>
+				</select>
+				<br>
+				<label>Gluten-Free</label>
+				<select onchange="setRestriction('gluten-free')" id="gluten-free">
+					<option value="true"> Yes </option>
+					<option value="false" selected="selected"> No </option>
+				</select>
 				<br />
-				<input
-					type="checkbox"
-					id="glutenFree"
-					class="restriction"
-					onClick="restrictions.glutenFree = !restrictions.glutenFree"
-				/>
-				<label> Gluten-free </label>
-				<br />
-				<input
-					type="checkbox"
-					id="organic"
-					class="restriction"
-					onClick="restrictions.organic = !restrictions.organic"
-				/>
 				<label> Organic </label>
+				<select onchange="setRestriction('organic')" id="organic">
+					<option value="true"> Yes </option>
+					<option value="false" selected="selected"> No </option>
+				</select>
 			</div>
 		</div>
 
 		<div id="Products" class="tabcontent">
 			<h3>Your targeted products</h3>
 			<p>We preselected products based on your restrictions.</p>
-			Choose items to buy:
 			<div id="displayProduct" class="display-box"></div>
 			<button
 				id="addCart"
