fixed a back button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- Tab content -->
 		<div id="Client" class="tabcontent">
 			<div class="display-box">
-				<button id="prevPage" type="button" class="block" onclick="openInfo(event, 'Products')"> Back ← </button>
+				<button id="prevPage" type="button" class="block" onclick="openInfo(event, 'Welcome')"> Back ← </button>
 			</div>
 			<br>
 			<h3> About you </h3>
